portfolio section gap fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,7 @@ img {
   padding-right: 15px;
   margin: auto;
   width: 1158px;
-  outline: 1px red solid;
+  /* outline: 1px red solid; */
 }
 /* #endregion */
 /* #region header */
@@ -255,7 +255,6 @@ img {
   justify-content: center;
   flex-direction: column;
   gap: 8px;
-  outline: 1px red solid;
   width: 232px;
   margin: 0 auto;
 }
@@ -339,13 +338,15 @@ img {
   color: #2e2f42;
 }
 .portfolio-list {
-  padding-left: 0px;
   padding-bottom: 120px;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  column-gap: 24px;
+  row-gap: 48px;
 }
 .portfolio-item {
-  width: calc((100% - 2 * 24px) / 3);
+  flex-basis: calc((100% - 48px) / 3);
 }
 .portfolio-img {
   height: auto;
